# RobotDart

./: .gitignore  CLAUDE.md  LOG_README.md  README.md  ROBOTDART_README.md  WORK_SUMMARY.md  What I am doing.md  command.md  environment.yml  environment_5090.yml  pyproject.toml  run_denoiser_single_gpu.sh  run_g1_feature_denoiser.sh
configs/: README.md  act_classes.yaml  data_schema.yaml  motion_config.yaml
data_pipeline/: README.md  __init__.py  cli.py
data_scripts/: extract_dataset_g1.py  process_motion_primitive_g1.py  process_motion_primitive_g1_69.py  render_bones_samples.py  verify_g1_pipeline.py  vis_gmr_filtered.py
docs/: README.md
flow_matching/: fm_sampler.py
logs/: 2026-04-03_16-22_filtered-data-prep.md  2026-04-04_21-58_filter-redo-pipeline-rebuild.md  2026-04-07.md  2026-04-08_dart-vs-g1-analysis.md  2026-04-08_diagnosis.md  2026-04-08_pipeline_verification_plan.md  2026-04-09.md  2026-04-09_ddp-and-dataset-perf.md  2026-04-10_rollout_drift_root_cause.md  2026-04-11.md  2026-04-15.md  2026-04-17.md  2026-04-22.md  2026-04-28.md  2026-05-04.md  2026-05-05.md  2026-05-06.md  2026-05-07.md  2026-05-08.md  2026-05-09.md  2026-05-10.md  2026-05-12.md  2026-05-13.md  2026-05-14.md  2026-05-16.md  2026-05-17.md  2026-05-20.md  _template.md
mld/: debug_arms.py  diag_fm_text.py  render_g1_rollout.py  render_g1_rollout_69.py  test_g1_mvae.py  test_g1_mvae_69.py  train_g1_fm_cfm.py  train_g1_mld.py  train_g1_mvae.py  validate_g1_dataset.py
notes/: architecture_agent.md  handover_scope.md  module_build_list.md  nmi_inventory.md  paper_direction.md  (+4 more)
(+539 files in other folders)
