[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dart-robotdart"
version = "0.1.0"
description = "DART framework adapted for Unitree G1 humanoid robot + VAD-conditioned motion"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
# 3 skill agents (Tier 1 — production code) + _legacy (read-only archive,
# kept so `from _legacy.utils.model_util import ...` resolves cleanly).
# The 9 pre-reorg packages (mld / data_loaders / diffusion / flow_matching /
# utils / agent / evaluation / visualize / model) were dissolved into the
# 3 agents on 2026-05-22 — see git log around commit 7c68081 / 4f7a3f2.
include = ["MoGenAgent*", "ManipAgent*", "LocoAgent*", "_legacy*"]
